[package]
name = "mean-images"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.5", features = ["rgb"] }
num-bigint = "0.4.3"
num-traits = "0.2.15"
rayon = "1.6.0"
walkdir = "2.3.2"
